# lazybids

./: .gitignore  .gitmodules  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: mkdocs.yml  python-publish.yml
basic_usage/: index.html
docs/: basic_usage.md  index.md  reference.md
examples/: api_test.ipynb  bids_asl_example.ipynb  bids_starter_kit_load.ipynb
examples/dataset/: ds002293-1.0.0.sh
lazybids/: __init__.py  connection.py  datatypes.py
lazybids/resources/: itk_supported_extensions.json
lazybids/tests/: api_test.py
lazybids/utils/: utils.py
reference/: index.html
search/: search_index.json
