[tool.poetry]
name = "lazybids"
version = "0.0.2"
description = "lazybids is a python package that helps interact with existing bids datasets and convert existing dicom or nifti datasets to BIDS."
authors = ["Roelant <roelanteijgelaar@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
pandas = "^2.0.0"
tqdm = "^4.66.3"
rich = "^13.7.0"
torchio = {extras = ["plot"], version = "^0.19.3"}
pydantic = "^2.5.2"
monai = "^1.3.0"
nibabel = "^5.1.0"
itk = "^5.3.0"
pydicom = "^2.4.3"
h5py = "^3.10.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.10.0"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
